30UpdatePlan.md M3: generalize formatter batching into ciac-codegen, port Go
Lifts the batching post-pass from ciac-backend-java into a shared
ciac_codegen::format_batch helper and ports Go's gofmt onto it, so both
formatter-shelling backends invoke their tool once per generate() call
instead of once per file. Java's behavior is unchanged (byte-identical);
Go now shares the same discipline for consistency and future-proofing.
Documents the requirement for out-of-tree backends in
docs/external-backends.md.